--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,6 @@
 {
-  "editor.defaultFormatter": "dsznajder.es7-react-js-snippets"
+  "editor.defaultFormatter": "dsznajder.es7-react-js-snippets",
+  "[typescript]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  }
 }
