--- a/app.json
+++ b/app.json
@@ -43,6 +43,14 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {
+        "origin": false
+      },
+      "eas": {
+        "projectId": "4984d152-d0d5-4b6b-a229-c522bfccc661"
+      }
     }
   }
 }
