--- a/app.json
+++ b/app.json
@@ -51,6 +51,7 @@
       "eas": {
         "projectId": "4984d152-d0d5-4b6b-a229-c522bfccc661"
       }
-    }
+    },
+    "owner": "abaig316"
   }
 }
