Update app name

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "sweden-prayer-times",
+    "name": "Sweden Prayer Times",
     "slug": "sweden-prayer-times",
     "version": "1.0.0",
     "orientation": "portrait",
