--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.anonymous.swedenprayertimes",
+      "package": "com.baigsoftwaredev.swedenprayertimes",
       "permissions": ["android.permission.HIGH_SAMPLING_RATE_SENSORS"]
     },
     "web": {
