--- a/app.json
+++ b/app.json
@@ -17,7 +17,8 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.baigsoftwaredev.swedenprayertimes",
-      "permissions": ["android.permission.HIGH_SAMPLING_RATE_SENSORS"]
+      "permissions": ["android.permission.HIGH_SAMPLING_RATE_SENSORS"],
+      "blockedPermissions": ["android.permission.ACTIVITY_RECOGNITION"]
     },
     "web": {
       "bundler": "metro",
